--- a/index.html
+++ b/index.html
@@ -7,19 +7,38 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<nav>
     <header>
-<ul>
+<nav class="navbar">
+
+    <img src="profile.png" alt="Profile Icon" class="profile-icon">
+    <img src="netflix.png" alt="netflix logo" class="logo">
+<svg width="12" height="12" viewBox="0 0 12 12" fill="white" class="dropdown-arrow">
+        <path d="M6 9L1 4h10z"/>
+    
+    </svg>
+    <ul class="nav-links">
+    <li class="search-item">
+            <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2">
+                <circle cx="11" cy="11" r="8"></circle>
+                <path d="m21 21-4.35-4.35"></path>
+            </svg>
     <li>Home</li>
     <li>Shows</li>
     <li>Movies</li>
     <li>Games</li>
-    <li>My netflix</li>
+    <li>My Netflix</li>
 </ul>
 </nav>
-
-
     </header>   
-<script src="script.js"></script>
+    <main>
+        <section class="continue-watching">
+            <h2>Continue Watching</h2>
+        <div class="content-row">
+            <div class="card large"></div>
+            <img src="card.jpg" alt="Card Image" class="card-large">
+    </main>
+
+
+    </main>
 </body>
 </html>
