Add small card improve code

--- a/index.html
+++ b/index.html
@@ -33,11 +33,25 @@
     <main>
         <section class="continue-watching">
             <h2>Continue Watching</h2>
-        <div class="content-row">
-            <div class="card large"></div>
-            <img src="card.jpg" alt="Card Image" class="card-large">
-    </main>
+       <div class="content-row">
 
+  <div class="watch-card">
+    <img src="card.jpg" alt="Card Image" class="card-large">
+
+    <div class="card-info">
+      <div class="progress-bar">
+        <div class="progress-fill" style="width: 50%"></div>
+      </div>
+      <p class="episode-info">Chainsaw Man Reze Arc</p>
+      <p class="time-left">50m left</p>
+    </div>
+  </div>
+
+  <div class="card-small">
+    <img src="yourname.jpeg" alt="movie image" class="small-card-image">
+  </div>
+
+</div>
 
     </main>
 </body>
