--- a/index.html
+++ b/index.html
@@ -46,13 +46,35 @@
       <p class="time-left">50m left</p>
     </div>
   </div>
-
   <div class="card-small">
     <img src="yourname.jpeg" alt="movie image" class="small-card-image">
-  </div>
-
 </div>
-
+<div class="card-small-two">
+    <img src="Avengerss.jpeg" alt="Avengers movie image" class="small-card-image-two">
+</div>
+<div class="card-small-three">
+    <img src="spiderman.jpeg" alt="Spiderman movie image" class="small-card-image-three">
+</div>
+</div>
+<div class="Liked">
+<h3>TV Shows & Movies You've Liked</h3>
+<div class="liked-row">
+    <div class="liked-card">
+        <img src="zootopia.jpeg" alt="Zootopia 2 movie" class="zootopia-image">
+    </div>
+    <div class="liked-card-three">
+        <img src="avatar.jpeg" alt="Avatar Movie" class="Avatar-image">
+    </div>
+    <div class="liked-card-four">
+        <img src="28-years.jpeg" alt="28-years-later movie" class="28-years-four">
+    </div>
+    <div class="liked-card-five">
+        <img src="starr.jpeg" alt="star-wars movie" class="star">
+    </div>
+     <div class="liked-card-six">
+        <img src="hunger.jpeg" alt="hunger-games-movie" class="hunger">
+    </div>
+</div>
     </main>
 </body>
 </html>
