Add final touches and folder for images

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
 <nav class="navbar">
 
-    <img src="profile.png" alt="Profile Icon" class="profile-icon">
-    <img src="netflix.png" alt="netflix logo" class="logo">
+    <img src="/images/profile.png" alt="Profile Icon" class="profile-icon">
+    <img src="/images/netflix.png" alt="netflix logo" class="logo">
 <svg width="12" height="12" viewBox="0 0 12 12" fill="white" class="dropdown-arrow">
         <path d="M6 9L1 4h10z"/>
     
@@ -36,7 +36,7 @@
        <div class="content-row">
 
   <div class="watch-card">
-    <img src="card.jpg" alt="Card Image" class="card-large">
+    <img src="/images/card.jpg" alt="Card Image" class="card-large">
 
     <div class="card-info">
       <div class="progress-bar">
@@ -47,32 +47,35 @@
     </div>
   </div>
   <div class="card-small">
-    <img src="yourname.jpeg" alt="movie image" class="small-card-image">
+    <img src="/images/yourname.jpeg" alt="movie image" class="small-card-image">
 </div>
 <div class="card-small-two">
-    <img src="Avengerss.jpeg" alt="Avengers movie image" class="small-card-image-two">
+    <img src="/images/Avengerss.jpeg" alt="Avengers movie image" class="small-card-image-two">
 </div>
 <div class="card-small-three">
-    <img src="spiderman.jpeg" alt="Spiderman movie image" class="small-card-image-three">
+    <img src="/images/spiderman.jpeg" alt="Spiderman movie image" class="small-card-image-three">
+</div>
+<div class="card-small-four">
+    <img src="/images/resident.jpeg" alt="resident evil movie image" class="small-card-image-four">
 </div>
 </div>
 <div class="Liked">
 <h3>TV Shows & Movies You've Liked</h3>
 <div class="liked-row">
     <div class="liked-card">
-        <img src="zootopia.jpeg" alt="Zootopia 2 movie" class="zootopia-image">
+        <img src="/images/zootopia.jpeg" alt="Zootopia 2 movie" class="zootopia-image">
     </div>
     <div class="liked-card-three">
-        <img src="avatar.jpeg" alt="Avatar Movie" class="Avatar-image">
+        <img src="/images/avatar.jpeg" alt="Avatar Movie" class="Avatar-image">
     </div>
     <div class="liked-card-four">
-        <img src="28-years.jpeg" alt="28-years-later movie" class="28-years-four">
+        <img src="/images/28-years.jpeg" alt="28-years-later movie" class="28-years-four">
     </div>
     <div class="liked-card-five">
-        <img src="starr.jpeg" alt="star-wars movie" class="star">
+        <img src="/images/starr.jpeg" alt="star-wars movie" class="star">
     </div>
      <div class="liked-card-six">
-        <img src="hunger.jpeg" alt="hunger-games-movie" class="hunger">
+        <img src="/images/hunger.jpeg" alt="hunger-games-movie" class="hunger">
     </div>
 </div>
     </main>
